chore: polish example code (fix some SonarLint findings)